22-11-02 / 서브페이지 정리중1

--- a/views/travel_hotel.ejs
+++ b/views/travel_hotel.ejs
@@ -11,6 +11,7 @@
 <body>
     <%- include("common/header.ejs"); %>
     <div id="container">
+        <!-- where 영역 -->
         <div class="where">
             <div class="center">
                 <h3 class="title">어디로 가시나요?</h3>
@@ -79,8 +80,8 @@
                 </div>
             </div>
         </div>
-        <!-- 슬라이더 -->
-        <div class="good_hotel">
+        <!-- slide_hotel 영역 -->
+        <!-- <div class="slide_hotel">
             <div class="center">
                 <h2 class="title">호텔 리뷰</h2>
                 <div class="silde_wrap">
@@ -92,7 +93,7 @@
                                 두번째 문단입니다.
                             </p>
                             <div class="person">
-                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="person_img"></div>
                                 <div class="name_hotel">
                                     <p class="hotel">숙박했던 호텔</p>
                                     <p class="name">사용자 이름</p>
@@ -106,7 +107,7 @@
                                 두번째 문단입니다.
                             </p>
                             <div class="person">
-                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="person_img"></div>
                                 <div class="name_hotel">
                                     <p class="hotel">숙박했던 호텔</p>
                                     <p class="name">사용자 이름</p>
@@ -120,7 +121,7 @@
                                 두번째 문단입니다.
                             </p>
                             <div class="person">
-                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="person_img"></div>
                                 <div class="name_hotel">
                                     <p class="hotel">숙박했던 호텔</p>
                                     <p class="name">사용자 이름</p>
@@ -128,6 +129,63 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- many_hotel 영역 -->
+        <div class="many_hotel">
+            <div class="center">
+                <div class="text_box">
+                    <h3 class="title">이달 특가<span> 숙소</span></h3>
+                    <p class="sub_title">최저가로 숙소를 구해보아요~</p>
+                </div>
+                <div class="hotel_box_wrap">
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel01.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>4성급</span>
+                                <p class="hotel_title">[제주] 유탑 유블레스호텔</p>
+                                <p class="price">최저가 <span>128,000</span></p>
+                            </div>
+                        </div> 
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                                <p class="hotel_title">[여수] 소노캄 여수</p>
+                                <p class="price">최저가 <span>128,000</span></p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="hotel_box">
+                            <div class="img_wrap">
+                                <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            </div>
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                                <p class="hotel_title">[여수] 소노캄 여수</p>
+                                <p class="price">최저가 <span>128,000</span></p>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- <a href="#">
+                        <div class="hotel_box">
+                            <img src="/img/sub_hotel02.jpg" alt="호텔 이미지입니다.">
+                            <div class="rank">
+                                <i class="fa-solid fa-star"></i><span>5성급</span>
+                                <p class="hotel_title">[여수] 소노캄 여수</p>
+                                <p class="price">최저가 <span>128,000</span></p>
+                            </div>
+                        </div>
+                    </a> -->
                 </div>
             </div>
         </div>
