--- a/html/css/style.css
+++ b/html/css/style.css
@@ -306,6 +306,7 @@ body::-webkit-scrollbar-track {
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(1) {
   background-image: url(/img/popular01.jpg);
+  transform: translateX(-100%);
 }
 #container .popular_local .center .local_wrap .local_box:nth-child(2) {
   background-image: url(/img/popular02.jpg);
@@ -361,12 +362,15 @@ body::-webkit-scrollbar-track {
 #container .popular_local .center .local_wrap .mg {
   margin-bottom: 2%;
 }
+#container .section.on .local_box:nth-child(1) {
+  background-image: url(/img/popular01.jpg);
+  transform: translateX(0);
+}
 #container .local_video {
   display: flex;
   justify-content: center;
   padding: 100px 0 150px;
   margin: 180px 0;
-  background-color: #edf6ff;
 }
 #container .local_video .center {
   width: 100%;
@@ -436,7 +440,9 @@ body::-webkit-scrollbar-track {
 #container .tour_bus {
   display: flex;
   justify-content: center;
-  padding-bottom: 300px;
+  padding: 100px 0 200px;
+  margin-bottom: 400px;
+  background-color: #edf6ff;
 }
 #container .tour_bus .center {
   width: 70%;
@@ -573,7 +579,7 @@ body::-webkit-scrollbar-track {
 #container .package .center .package_wrap .left {
   width: 40%;
   height: 450px;
-  background-image: url("/img/popular.jpg");
+  background-image: url("/img/package_left.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 87px 0 0 20px;
@@ -583,14 +589,17 @@ body::-webkit-scrollbar-track {
   font-size: 30px;
   line-height: 35px;
   margin-bottom: 50px;
+  color: #fff;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 #container .package .center .package_wrap .left .package_menu li {
   width: 53%;
-  background-color: palegreen;
+  background-color: #f5f5f5;
   border-radius: 10px;
   margin-bottom: 18px;
   line-height: 45px;
   padding-left: 12px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 #container .package .center .package_wrap .left .package_menu li a {
   display: block;
@@ -615,7 +624,6 @@ body::-webkit-scrollbar-track {
 #container .package .center .package_wrap .right .local .box {
   width: 31.333%;
   margin-right: 2%;
-  border: 1px solid #cbcbcb;
   border-radius: 10px;
   overflow: hidden;
   background-color: #fff;
@@ -633,6 +641,8 @@ body::-webkit-scrollbar-track {
 }
 #container .package .center .package_wrap .right .local .box a .package_info {
   padding: 10px;
+  border: 1px solid #cbcbcb;
+  border-radius: 0 0 10px 10px;
 }
 #container .package .center .package_wrap .right .local .box a .package_info .tour_title {
   margin-top: 2px;
@@ -656,6 +666,10 @@ body::-webkit-scrollbar-track {
 }
 #container .package .center .package_wrap .right .local.on {
   opacity: 1;
+}
+#container .comp_map #map {
+  width: 100%;
+  height: 500px;
 }
 #container .banner {
   background-color: orchid;
@@ -1023,10 +1037,10 @@ body::-webkit-scrollbar-track {
 #container .where {
   display: flex;
   justify-content: center;
+  margin-bottom: 150px;
 }
 #container .where .center {
   width: 57%;
-  background-color: #dbdbdb;
 }
 #container .where .center .title {
   text-align: center;
@@ -1036,7 +1050,6 @@ body::-webkit-scrollbar-track {
   text-align: center;
 }
 #container .where .center .sub_popular_local .local_list_wrap, #container .where .center .sub_popular_local .theme_list_wrap, #container .where .center .theme_hotel .local_list_wrap, #container .where .center .theme_hotel .theme_list_wrap {
-  background-color: pink;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -1052,6 +1065,7 @@ body::-webkit-scrollbar-track {
   overflow: hidden;
   position: relative;
   border-radius: 10px;
+  box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
 }
 #container .where .center .sub_popular_local .local_list_wrap > a .local_list .local_bg, #container .where .center .sub_popular_local .local_list_wrap > a .local_list .theme_bg, #container .where .center .sub_popular_local .local_list_wrap > a .theme_list .local_bg, #container .where .center .sub_popular_local .local_list_wrap > a .theme_list .theme_bg, #container .where .center .sub_popular_local .theme_list_wrap > a .local_list .local_bg, #container .where .center .sub_popular_local .theme_list_wrap > a .local_list .theme_bg, #container .where .center .sub_popular_local .theme_list_wrap > a .theme_list .local_bg, #container .where .center .sub_popular_local .theme_list_wrap > a .theme_list .theme_bg, #container .where .center .theme_hotel .local_list_wrap > a .local_list .local_bg, #container .where .center .theme_hotel .local_list_wrap > a .local_list .theme_bg, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .local_bg, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .theme_bg, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .local_bg, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .theme_bg, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .local_bg, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .theme_bg {
   width: 100%;
@@ -1089,20 +1103,57 @@ body::-webkit-scrollbar-track {
 #container .where .center .btn_wrap .hotel_more i {
   margin-left: 7px;
 }
-#container .good_hotel {
+#container .slide_hotel {
   width: 100%;
 }
-#container .good_hotel .center {
+#container .slide_hotel .center {
   background-color: skyblue;
 }
-#container .good_hotel .center .title {
+#container .slide_hotel .center .title {
   text-align: center;
   margin: 10px 0;
 }
-#container .good_hotel .center .silde_wrap .silde_view {
+#container .slide_hotel .center .silde_wrap .silde_view {
   width: 100%;
   display: flex;
   background-color: #27aa78;
+}
+#container .many_hotel {
+  display: flex;
+  justify-content: center;
+}
+#container .many_hotel .center {
+  width: 57%;
+}
+#container .many_hotel .center .text_box {
+  text-align: center;
+  margin-bottom: 80px;
+}
+#container .many_hotel .center .text_box .title {
+  font-size: 21px;
+  margin-bottom: 15px;
+}
+#container .many_hotel .center .text_box .title span {
+  color: #00d3ff;
+}
+#container .many_hotel .center .text_box .sub_title {
+  font-size: 15px;
+}
+#container .many_hotel .center .hotel_box_wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+#container .many_hotel .center .hotel_box_wrap .hotel_box {
+  width: 31.333%;
+  margin: 1%;
+  height: 300px;
+  display: block;
+}
+#container .many_hotel .center .hotel_box_wrap .hotel_box img {
+  width: 100%;
+  height: 100%;
 }
 
 #go_top {
