--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -210,13 +210,22 @@
                     &:hover {
                         .hover_box {bottom: 0;}
                     }
-                    &:nth-child(1) {background-image: url(/img/popular01.jpg);}
-                    &:nth-child(2) {background-image: url(/img/popular02.jpg);}
-                    &:nth-child(3) {background-image: url(/img/popular03.jpg);}
+                    &:nth-child(1) {
+                        background-image: url(/img/popular01.jpg);
+                        transform: translateX(-100%);
+                    }
+                    &:nth-child(2) {
+                        background-image: url(/img/popular02.jpg);
+                    }
+                    &:nth-child(3) {
+                        background-image: url(/img/popular03.jpg);
+                    }
                     &:nth-child(4) {
                         background-image: url(/img/popular04.jpg);
                         width: 66%;}
-                    &:nth-child(5) {background-image: url(/img/popular05.jpg);}
+                    &:nth-child(5) {
+                        background-image: url(/img/popular05.jpg);
+                    }
                     .text_box { 
                         color: #fff;
                         background-color: rgba(0,0,0,0.7);
@@ -246,11 +255,20 @@
             }
         }
     }
+    .section.on {
+        //클래스 'on' 붙은 popular_local 영역
+        .local_box {
+            &:nth-child(1) {
+                background-image: url(/img/popular01.jpg);
+                transform: translateX(0);
+            }
+        }
+    }
     //메인페이지 local_video 영역
     .local_video {
         display: flex; justify-content: center;
         padding: 100px 0 150px; margin: 180px 0;
-        background-color: #edf6ff;
+        // background-color: #edf6ff;
         .center {
             width: 100%;
             .title_box {
@@ -301,7 +319,9 @@
     //메인페이지 tour_bus 영역
     .tour_bus {
         display: flex; justify-content: center;
-        padding-bottom: 300px;
+        padding: 100px 0 200px;
+        margin-bottom: 400px;
+        background-color: #edf6ff;
         .center {
             width: 70%;
             .title_box {
@@ -399,7 +419,7 @@
                 display: flex; position: relative;
                 .left {
                     width: 40%; height: 450px;
-                    background-image: url("/img/popular.jpg");
+                    background-image: url("/img/package_left.jpg");
                     background-repeat: no-repeat;
                     background-size: cover;
                     padding: 87px 0 0 20px;
@@ -407,15 +427,18 @@
                     .big_text {
                         font-size: 30px; line-height: 35px;
                         margin-bottom: 50px;
+                        color: #fff;
+                        text-shadow: 5px 5px 10px rgba(0,0,0,0.5);
                     }
                     .package_menu {
                         li {
                             width: 53%;
-                            background-color: palegreen;
+                            background-color: #f5f5f5;
                             border-radius: 10px;
                             margin-bottom: 18px;
                             line-height: 45px;
                             padding-left: 12px;
+                            box-shadow: 5px 5px 10px rgba(0,0,0,0.5);;
                             a {
                                 display: block; width: 100%; height: 100%;
                                 color: #000;
@@ -436,7 +459,7 @@
                         .box {
                             width: 31.333%;
                             margin-right: 2%;
-                            border: 1px solid #cbcbcb;
+                            // border: 1px solid #cbcbcb;
                             border-radius: 10px;
                             overflow: hidden;
                             background-color: #fff;
@@ -448,6 +471,8 @@
                                 }
                                 .package_info {
                                     padding: 10px;
+                                    border: 1px solid #cbcbcb;
+                                    border-radius: 0 0 10px 10px;
                                     .tour_title {
                                         margin-top: 2px; font-size: 18px;
                                         font-weight: 600;
@@ -473,6 +498,12 @@
                     }
                 }
             }
+        }
+    }
+    //메인페이지 map 영역
+    .comp_map {
+        #map {
+            width: 100%; height: 500px;
         }
     }
     // 배너
@@ -769,11 +800,12 @@
         }
     }
     // 호텔(서브페이지)
-    // 호텔페이지 첫번째 영역
+    // 호텔페이지 where 영역
     .where {
         display: flex; justify-content: center;
+        margin-bottom: 150px;
         .center {
-            width: 57%; background-color: #dbdbdb;
+            width: 57%;
             .title {
                 text-align: center; margin: 30px 0;
             }
@@ -782,7 +814,6 @@
                     text-align: center;
                 }
                 .local_list_wrap,.theme_list_wrap {
-                    background-color: pink;
                     width: 100%;
                     display: flex; justify-content: space-between;
                     align-items: center;
@@ -793,6 +824,7 @@
                             margin: 0 1%; height: 200px;
                             overflow: hidden; position: relative;
                             border-radius: 10px;
+                            box-shadow: 1px 5px 10px rgba(0,0,0,0.3);
                             .local_bg,.theme_bg {
                                 width: 100%; height: 100%;
                                 transition: all 0.5s;
@@ -826,8 +858,8 @@
             }
         }
     }
-    // 호텔페이지 두번째 영역
-    .good_hotel {
+    // 호텔페이지 slide_hotel 영역
+    .slide_hotel {
         width: 100%;
         .center {
             background-color: skyblue;
@@ -839,6 +871,33 @@
                     width: 100%;
                     display: flex;
                     background-color: #27aa78;
+                }
+            }
+        }
+    }
+    // 호텔페이지 many_hotel 영역
+    .many_hotel {
+        display: flex; justify-content: center;
+        .center {
+            width: 57%;
+            .text_box {
+                text-align: center; margin-bottom: 80px;
+                .title {
+                    font-size: 21px; margin-bottom: 15px;
+                    span {color: #00d3ff;}
+                }
+                .sub_title {
+                    font-size: 15px;
+                }
+            }
+            .hotel_box_wrap {
+                display: flex; justify-content: space-between;
+                align-items: center; flex-wrap: wrap;
+                .hotel_box {
+                    width: 31.333%; margin: 1%;
+                    height: 300px;
+                    display: block;
+                    img {width: 100%; height: 100%;}
                 }
             }
         }
