--- a/views/index.ejs
+++ b/views/index.ejs
@@ -450,7 +450,7 @@
                 </div>
             </div>
         </div>
-        <div class="airplan section">
+        <!-- <div class="airplan section">
             <div class="center">
                 <div class="air">
                     <div class="img"></div>
@@ -473,6 +473,11 @@
                     <p class="air_name">진에어</p>
                 </div>
             </div>
+        </div> -->
+        <!-- 지도 api 영역 -->
+        <div class="comp_map section">
+            <h2 class="title">찾아오시는 길</h2>
+            <div id="map"></div>
         </div>
     </div>
     <!-- 맨 위로 가는 기능 -->
@@ -480,9 +485,20 @@
     <!-- 하단영역 -->
     <%- include("common/footer.ejs"); %>
     <!-- js -->
+    <!-- map js -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f4d91c3dcdaf072fd01e597612ee08d0"></script>
+    <script>
+        let container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+        let options = { //지도를 생성할 때 필요한 기본 옵션
+            center: new kakao.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
+            level: 3 //지도의 레벨(확대, 축소 정도)
+        };
+
+        let map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+    </script>
     <script src="/js/slide.js"></script>
     <script src="/js/count.js"></script>
     <script src="/js/package_tab.js"></script>
-    <!-- 패키지여행 / 인기있는지역 등 a태그 추가하기 -->
+    <script src="/js/peekaboo.js"></script>
 </body>
 </html>
