--- a/html/css/style.css
+++ b/html/css/style.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar-track {
 #header {
   margin: 0 auto;
   z-index: 99;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 #header .center {
   margin: 0 auto;
@@ -78,6 +78,7 @@ body::-webkit-scrollbar-track {
 }
 #header .h_top .right_box li span {
   font-size: 13px;
+  color: #fff;
 }
 #header .h_top .right_box li::after {
   content: "";
@@ -701,7 +702,7 @@ body::-webkit-scrollbar-track {
 }
 #container .banner.list .center .text_box {
   color: #fff;
-  background-color: #686868;
+  background-color: rgba(0, 0, 0, 0.4);
   padding: 50px;
   border-radius: 10px;
 }
@@ -714,21 +715,20 @@ body::-webkit-scrollbar-track {
 }
 #container .banner.list .center .text_box .go_insert {
   color: #fff;
-  background-color: #27aa78;
+  background-color: #399cd1;
   display: inline-block;
   padding: 20px;
   box-sizing: border-box;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 21px;
 }
 #container .travel_list {
   display: flex;
   justify-content: center;
-  background-color: orange;
 }
 #container .travel_list .center {
   width: 57%;
-  background-color: palegoldenrod;
+  background-color: #aedef7;
   padding: 50px;
   box-sizing: border-box;
 }
@@ -750,7 +750,7 @@ body::-webkit-scrollbar-track {
   padding: 30px;
   box-sizing: border-box;
   margin-bottom: 30px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 #container .travel_list .center .list_wrap .list_box .left {
   width: 70%;
@@ -796,20 +796,20 @@ body::-webkit-scrollbar-track {
 #container .travel_list .center .list_wrap .list_box .right img {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 #container .travel_list .center .btn_wrap {
   display: flex;
   justify-content: flex-end;
 }
 #container .travel_list .center .btn_wrap .write_btn {
-  background-color: pink;
+  background-color: #fff;
   display: inline-block;
   width: 85px;
   line-height: 45px;
   color: #505050;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 #container .detail_page {
   display: flex;
@@ -940,7 +940,6 @@ body::-webkit-scrollbar-track {
 }
 #container .insert_wrap .center, #container .update_wrap .center {
   width: 57%;
-  background-color: #ff8119;
 }
 #container .insert_wrap .center > h3, #container .update_wrap .center > h3 {
   font-size: 30px;
@@ -973,7 +972,7 @@ body::-webkit-scrollbar-track {
   width: 70%;
   padding-left: 12px;
   border-radius: 5px;
-  border: 1px solid #000;
+  border: 1px solid #cdcdcd;
 }
 #container .insert_wrap .center #insert_form .insert_top .name_box, #container .insert_wrap .center #insert_form .update_top .name_box, #container .insert_wrap .center #update_form .insert_top .name_box, #container .insert_wrap .center #update_form .update_top .name_box, #container .update_wrap .center #insert_form .insert_top .name_box, #container .update_wrap .center #insert_form .update_top .name_box, #container .update_wrap .center #update_form .insert_top .name_box, #container .update_wrap .center #update_form .update_top .name_box {
   width: 20%;
@@ -984,11 +983,11 @@ body::-webkit-scrollbar-track {
 }
 #container .insert_wrap .center #insert_form .insert_top .name_box .name, #container .insert_wrap .center #insert_form .update_top .name_box .name, #container .insert_wrap .center #update_form .insert_top .name_box .name, #container .insert_wrap .center #update_form .update_top .name_box .name, #container .update_wrap .center #insert_form .insert_top .name_box .name, #container .update_wrap .center #insert_form .update_top .name_box .name, #container .update_wrap .center #update_form .insert_top .name_box .name, #container .update_wrap .center #update_form .update_top .name_box .name {
   width: 60%;
-  background-color: #949494;
+  background-color: #c3c3c3;
   color: #353535;
   padding: 10px 12px;
   border-radius: 5px;
-  border: 1px solid #585858;
+  border: 1px solid #cdcdcd;
   margin-right: 20px;
   box-sizing: border-box;
 }
@@ -1004,7 +1003,7 @@ body::-webkit-scrollbar-track {
 #container .insert_wrap .center #insert_form .bar, #container .insert_wrap .center #update_form .bar, #container .update_wrap .center #insert_form .bar, #container .update_wrap .center #update_form .bar {
   width: 100%;
   height: 2px;
-  background-color: red;
+  background-color: #368aff;
   border-radius: 10px;
   margin: 10px 0 20px;
 }
@@ -1013,9 +1012,9 @@ body::-webkit-scrollbar-track {
 }
 #container .insert_wrap .center #insert_form .context_wrap .context, #container .insert_wrap .center #update_form .context_wrap .context, #container .update_wrap .center #insert_form .context_wrap .context, #container .update_wrap .center #update_form .context_wrap .context {
   padding: 12px;
-  border: 1px solid #000;
+  border: 1px solid #cdcdcd;
   height: 550px;
-  border-radius: 5px;
+  border-radius: 10px;
   width: 100%;
   box-sizing: border-box;
   font-size: 16px;
@@ -1027,11 +1026,11 @@ body::-webkit-scrollbar-track {
 }
 #container .insert_wrap .center #insert_form .btn_wrap #sub_btn, #container .insert_wrap .center #insert_form .btn_wrap #upt_btn, #container .insert_wrap .center #update_form .btn_wrap #sub_btn, #container .insert_wrap .center #update_form .btn_wrap #upt_btn, #container .update_wrap .center #insert_form .btn_wrap #sub_btn, #container .update_wrap .center #insert_form .btn_wrap #upt_btn, #container .update_wrap .center #update_form .btn_wrap #sub_btn, #container .update_wrap .center #update_form .btn_wrap #upt_btn {
   width: 100px;
-  height: 35px;
-  border-radius: 5px;
+  height: 40px;
+  border-radius: 10px;
   border: none;
-  background-color: #27aa78;
-  color: #ffffff;
+  background-color: #368aff;
+  color: #fff;
   cursor: pointer;
 }
 #container .where {
